# Fastbnb-2.0

./: Pipfile  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py
app/auth/: __init__.py  register.py  utils.py
app/db_config/: __init__.py  config.py  database.py
app/repo/: __init__.py  property.py
app/routers/: __init__.py  properties.py  rent.py  routes.py
app/static/: index.css  index.js  slider.js
app/templates/: base.html  card.html  confirmation.html  index.html  landing.html  listing.html  modal.html  navbar.html  rent.html  search.html
app/templates/components/: card_slider.html  login.html  register.html
